--- a/src/app/views/create-point.html
+++ b/src/app/views/create-point.html
@@ -9,6 +9,7 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/style/create-point.css">
+    <link rel="stylesheet" href="/style/modal.css">
 {% endblock styles %}
 
 {% block content %}
@@ -20,7 +21,7 @@
         </a>
     </header>
 
-    <form action="">
+    <form action="/saveplace" method="POST">
         <h1>Cadastro do Ponto de Coleta</h1>
         <fieldset>
             <legend>
@@ -82,27 +83,27 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id="1">
-                    <img src="/icones/lampadas.svg" alt="Lâmpadas">
+                <li data-id="Lâmpadas">
+                <img src="/icones/lampadas.svg" alt="Lâmpadas">
                     <span>Lâmpadas</span>
                 </li>
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="/icones/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
-                <li data-id="3">
+                <li data-id="Papéis e Papelão">
                     <img src="/icones/papeis-papelao.svg" alt="Papéis e Papelão">
                     <span>Papéis e Papelão</span>
                 </li>
-                <li data-id="4">
+                <li data-id="Resíduos Eletrônicos">
                     <img src="/icones/eletronicos.svg" alt="Resíduos Eletrônicos">
                     <span>Resíduos Eletrônicos</span>
                 </li>
-                <li data-id="5">
+                <li data-id="Resíduos Orgânicos">
                     <img src="/icones/organicos.svg" alt="Resíduos Orgânicos">
                     <span>Resíduos Orgânicos</span>
                 </li>
-                <li data-id="6">
+                <li data-id="Óleo de Cozinha">
                     <img src="/icones/oleo.svg" alt="Óleo de Coziha">
                     <span>Óleo de Cozinha</span>
                 </li>
@@ -114,8 +115,28 @@
         <button type="submit">Cadastrar ponto de coleta</button>
 
     </form>
+
+    
 {% endblock content %}
 
+
+{% block modal %}
+    {% if confirm %}
+        <div id="modal" class="point">
+            <div class="content">
+                <img src="icones/check.svg" alt="Cadastro concluido">
+                <h1>Cadastrado Concluído!</h1>
+            </div>
+        </div>
+        <script>        setTimeout(() => {
+            window.location = "/"
+        }, 2000)
+        </script> 
+    {% endif %}
+{% endblock modal %}
+
+
 {% block scripts %}
-    <script src="/scripts/create-point.js"></script>
+    <script src="/scripts/create-point.js">
+    </script>
 {% endblock scripts %}
