--- a/public/style/responsive.css
+++ b/public/style/responsive.css
@@ -37,6 +37,11 @@
     #page-create-point .field-group .field + .field {
         margin-left: 0;
     }
+
+    #page-search-results main .cards .card .contact a img {
+        width: 50%;
+        height: 50%;
+    }
 }
 
 @media (min-width: 900px) {
