added input for email and phone

--- a/src/app/views/create-point.html
+++ b/src/app/views/create-point.html
@@ -49,7 +49,7 @@
                 </div>
 
                 <div class="field">
-                    <label for="address2">Número/Complemento</label>
+                    <label for="address2">Bairro/Complemento</label>
                     <input type="text" name="address2" required="required">
                 </div>
             </div>
@@ -72,7 +72,18 @@
 
                     <input type="hidden" name="city" value="">
                 </div>
+            </div>
 
+            <div class="field-group">
+                <div class="field">
+                    <label for="email">Email</label>
+                    <input type="email" name="email" placeholder="example@example.com">
+                </div>
+
+                <div class="field">
+                    <label for="whatsapp">Whatsapp</label>
+                    <input type="text" name="whatsapp" placeholder="00 00000 0000">
+                </div>
             </div>
         </fieldset>
 
